risc0/zirgen/dsl/test/abort.zir
// RUN: not zirgen --test %s 2>&1 | FileCheck %s

test {
  // CHECK: [0] Abort() -> ()
  // CHECK-NEXT: error: Evaluation error occured
  Abort();
}
